init commit to the Feature branch

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body>
     <h1>This is a Test</h1>
     <h2>Saving to the Development Branch</h2>
+    <h3>Saving to the Feature Branch</h3>
   </body>
 </html>
